# DriftDNS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  ddns.docker.example.yaml  ddns.example.yaml
.github/workflows/: docker-image.yml
src/: config.rs  history.rs  logger.rs  main.rs  web.rs
src/dns_backend/: mod.rs
src/dns_backend/providers/: cloudflare.rs
src/ip_detector/: mod.rs
src/ip_detector/providers/: cloudflare_dns.rs  icanhazip.rs  ip_sb.rs  ipify.rs  mod.rs
